<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>io.github.randomito</groupId>
    <artifactId>randomito-all</artifactId>
    <version>1.0.0-alpha4</version>
    <packaging>jar</packaging>

    <name>randomito</name>
    <description>Fast and simple object generation in your jUnits (convention over configuration).</description>
    <url>https://github.com/randomito</url>

    <developers>
        <developer>
            <name>Miron Balcerzak</name>
            <email>mironbalcerzak@gmail.com</email>
            <organization>io.github.randomito</organization>
            <organizationUrl>https://github.com/randomito</organizationUrl>
        </developer>
    </developers>

    <licenses>
        <license>
            <name>BSD 3-Clause License</name>
            <url>http://opensource.org/licenses/BSD-3-Clause</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <scm>
        <url>https://github.com/randomito/randomito-all.git</url>
        <connection>scm:git:git@github.com:randomito/randomito-all.git</connection>
        <developerConnection>scm:git:git@github.com:randomito/randomito-all.git</developerConnection>
    </scm>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <!--cobertura-->
        <cobertura.haltOnFail>false</cobertura.haltOnFail>
        <cobertura.branchRate>70</cobertura.branchRate>
        <cobertura.lineRate>70</cobertura.lineRate>
        <!--lib version-->
        <junit.version>4.11</junit.version>
        <commons-lang3.version>3.5</commons-lang3.version>
        <validation-api.version>1.1.0.Final</validation-api.version>
        <javax.inject.version>1</javax.inject.version>
        <hibernate-jpa-2.1-api.version>1.0.0.Final</hibernate-jpa-2.1-api.version>
        <spring-beans.version>4.3.7.RELEASE</spring-beans.version>
        <hamcrest-junit.version>2.0.0.0</hamcrest-junit.version>
        <mockito.version>1.10.19</mockito.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>${commons-lang3.version}</version>
        </dependency>

        <!-- annotations / jsr 330 -->
        <dependency>
            <groupId>javax.inject</groupId>
            <artifactId>javax.inject</artifactId>
            <version>${javax.inject.version}</version>
        </dependency>
        <!-- jsr 303 -->
        <dependency>
            <groupId>javax.validation</groupId>
            <artifactId>validation-api</artifactId>
            <version>${validation-api.version}</version>
        </dependency>
        <!-- persistence annotations -->
        <dependency>
            <groupId>org.hibernate.javax.persistence</groupId>
            <artifactId>hibernate-jpa-2.1-api</artifactId>
            <version>${hibernate-jpa-2.1-api.version}</version>
        </dependency>
        <!-- @autowired / @inject -->
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-beans</artifactId>
            <version>${spring-beans.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>org.springframework</groupId>
                    <artifactId>spring-core</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest-junit</artifactId>
            <version>${hamcrest-junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-all</artifactId>
            <version>${mockito.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <profiles>
        <profile>
            <id>development</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <build>
                <plugins>
<!--                    <plugin>-->
<!--                        <groupId>org.codehaus.mojo</groupId>-->
<!--                        <artifactId>cobertura-maven-plugin</artifactId>-->
<!--                        <version>2.6</version>-->
<!--                        <executions>-->
<!--                            <execution>-->
<!--                                <id>check</id>-->
<!--                                <phase>verify</phase>-->
<!--                                <goals>-->
<!--                                    <goal>clean</goal>-->
<!--                                    <goal>check</goal>-->
<!--                                </goals>-->
<!--                            </execution>-->
<!--                        </executions>-->
<!--                        <configuration>-->
<!--                            <formats>-->
<!--                                <format>html</format>-->
<!--                            </formats>-->
<!--                            <outputDirectory>target/cobertura</outputDirectory>-->
<!--                            <instrumentation>-->
<!--                                <excludes>-->
<!--                                    <exclude>org/randomito/Randomito.class</exclude>-->
<!--                                    <exclude>org/randomito/Randomito*.class</exclude>-->
<!--                                </excludes>-->
<!--                                <ignoreTrivial>true</ignoreTrivial>-->
<!--                            </instrumentation>-->
<!--                            <check>-->
<!--                                <haltOnFailure>${cobertura.haltOnFail}</haltOnFailure>-->
<!--                                &lt;!&ndash; Per-class thresholds &ndash;&gt;-->
<!--                                <branchRate>${cobertura.branchRate}</branchRate>-->
<!--                                <lineRate>${cobertura.lineRate}</lineRate>-->
<!--                                &lt;!&ndash; Project-wide thresholds &ndash;&gt;-->
<!--                                <totalBranchRate>${cobertura.branchRate}</totalBranchRate>-->
<!--                                <totalLineRate>${cobertura.lineRate}</totalLineRate>-->
<!--                            </check>-->
<!--                        </configuration>-->
<!--                    </plugin>-->
                </plugins>
            </build>
        </profile>
        <profile>
            <id>release</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-source-plugin</artifactId>
                        <version>2.2.1</version>
                        <executions>
                            <execution>
                                <id>attach-sources</id>
                                <goals>
                                    <goal>jar</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-javadoc-plugin</artifactId>
                        <version>2.9.1</version>
                        <executions>
                            <execution>
                                <id>attach-javadocs</id>
                                <goals>
                                    <goal>jar</goal>
                                </goals>
                            </execution>
                        </executions>
                        <configuration>
                            <additionalparam>-Xdoclint:none</additionalparam>
                        </configuration>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>1.5</version>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.6.1</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <distributionManagement>
        <snapshotRepository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
        <repository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
        </repository>
    </distributionManagement>
</project>